Functional Components UI Done

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .square {
   background: #fff;
   border: 1px solid #999;
-  float: left;
+  /* float: left; */
   font-size: 50px;
   font-weight: bold;
   margin-right: -1px;
